# adapter-public

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.local  README.md  cli.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  pyproject.toml  start.celery.sh  start.sh
deploy/: Dockerfile
deploy/configs/: redis.conf
migrations/: env.py
migrations/versions/: 0c29545e02df_client_is_use_meal_external_id.py  6f24e3ef1c8c_init.py
src/: __main__.py  app.py  config.py  constants.py  db.py  deps.py  exceptions.py  logger.py  models.py  repositories.py  tracer.py
src/api/: __init__.py  common.py  order.py  project.py  schemas.py
src/clients/: pos_client.py  rkeeper_client.py  sbis_client.py
src/core/repositories/: client.py  discount.py  menu.py  order.py
src/core/repositories/schemas/: client.py  menu.py
src/schemas/: base.py  client.py  order.py  rkeeper.py  sbis.py
src/services/: order.py  redis_client.py  transfer_menu_from_client_to_project.py
src/tasks/: schemas.py  sync.py  tasks.py
src/utils/: batch.py  enums.py  exceptions.py
tests/: conftest.py
tests/api/: test_common.py  test_order.py
tests/fixtures/: client.py  db.py  menu.py
tests/tasks/: test_sync.py
